--- a/src/app/shared/navbar/navbar.scss
+++ b/src/app/shared/navbar/navbar.scss
@@ -1,10 +1,16 @@
 nav {
-    .title-tabs {
-        font-size: 10px;
-        letter-spacing: 1.8px;
+    .mat-toolbar {
+        background: #fff;
     }
+}
 
-    .mat-toolbar-single-row {
-        height: 85px;
-    }
+.example-sidenav-content {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.example-sidenav {
+    padding: 20px;
 }
