--- a/src/app/features/home/home-page/home-page.scss
+++ b/src/app/features/home/home-page/home-page.scss
@@ -16,3 +16,32 @@
         border-color: red;
     }
 }
+
+.work {
+    .scroll-container {
+        height: 400px;
+        overflow: hidden;
+        position: relative;
+    }
+
+    .scroll-grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+        animation: scroll-up 15s linear infinite;
+    }
+
+    @keyframes scroll-up {
+        0% {
+            transform: translateY(0);
+        }
+
+        100% {
+            transform: translateY(-100%);
+        }
+    }
+
+    .scroll-container img {
+        width: 100%;
+    }
+}
