--- a/src/app/features/about/about-page/about-page.html
+++ b/src/app/features/about/about-page/about-page.html
@@ -1,1 +1,79 @@
-<p>about-page works!</p>
+<div class="container mx-auto my-6 grid gap-4 lg:grid-cols-3">
+    <!-- Left 2/3 -->
+    <div class="grid gap-4 lg:col-span-2">
+
+        <!-- Top Row -->
+        <div class="grid sm:grid-cols-3 gap-4">
+            <!-- Big text box -->
+            <div class="bg-pink-mid/40 rounded-3xl sm:col-span-2 p-8 flex items-end">
+                <p class="font-serif font-light text-2xl md:text-3xl mb-6">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tempor felis magna, vitae semper ipsum
+                    tristique in. Nullam malesuada consequat luctus.
+                </p>
+            </div>
+            <!-- Image -->
+            <img class="w-full h-48 sm:h-full object-cover object-center rounded-3xl" src="assets/about.jpg"
+                alt="Celeste Sierra">
+        </div>
+
+        <!-- Bottom Row -->
+        <div class="grid sm:grid-cols-2 gap-4">
+            <div class="bg-pink-mid/40 rounded-3xl flex flex-col justify-end p-8">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tempor felis magna, vitae semper ipsum
+                    tristique in. Nullam malesuada consequat luctus.
+                </p><br>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tempor felis magna, vitae semper ipsum
+                    tristique in. Nullam malesuada consequat luctus.
+                </p>
+            </div>
+            <div class="bg-pink-mid/40 rounded-3xl flex flex-col justify-between p-8">
+                <div>
+                    Any questions?
+                </div>
+                <div class="flex justify-between items-center">
+                    <p class=" text-2xl md:text-3xl">Contact me</p>
+                    <fa-icon routerLink="/contact" [icon]="faArrow" class="cursor-pointer text-sm"></fa-icon>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Right Sidebar -->
+    <div class="h-64 lg:h-[80vh] grid grid-rows-[1fr_auto] gap-4">
+
+        <!-- Top Content (fills most height) -->
+        <div class="bg-pink-mid/40 rounded-3xl p-8">
+            <mat-accordion>
+                <mat-expansion-panel [expanded]="true">
+                    <mat-expansion-panel-header>
+                        <mat-panel-title> Weddings </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <p>This is the primary content of the panel.</p>
+                </mat-expansion-panel>
+
+                <mat-expansion-panel (opened)="panelOpenState.set(true)" (closed)="panelOpenState.set(false)">
+                    <mat-expansion-panel-header>
+                        <mat-panel-title> Engagements </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <p>I'm visible because I am open</p>
+                </mat-expansion-panel>
+
+                <mat-expansion-panel (opened)="panelOpenState.set(true)" (closed)="panelOpenState.set(false)">
+                    <mat-expansion-panel-header>
+                        <mat-panel-title> Photoshoots </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <p>I'm visible because I am open</p>
+                </mat-expansion-panel>
+            </mat-accordion>
+        </div>
+
+        <!-- Bottom Socials (auto height) -->
+        <div class="bg-pink-mid/40 rounded-3xl flex gap-6 justify-center items-center p-8 uppercase">
+            <p>Instagram</p>
+            <p>Pinterest</p>
+        </div>
+    </div>
+
+</div>
